--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <style>
             /*
-* Style tweaks
-* --------------------------------------------------
-*/
+            * Style tweaks
+            * --------------------------------------------------
+            */
             html,
             body {
                 overflow-x: hidden; /* Prevent scroll on narrow devices */
@@ -23,43 +23,7 @@
             footer {
                 padding: 30px 0;
             }
-            /*
-            * Off Canvas
-            * --------------------------------------------------
-            */
-            @media screen and (max-width: 767px) {
-                .row-offcanvas {
-                    position: relative;
-                    -webkit-transition: all .25s ease-out;
-                    -moz-transition: all .25s ease-out;
-                    transition: all .25s ease-out;
-                }
-                .row-offcanvas-right {
-                    right: 0;
-                }
-                .row-offcanvas-left {
-                    left: 0;
-                }
-                .row-offcanvas-right
-                .sidebar-offcanvas {
-                    right: -50%; /* 6 columns */
-                }
-                .row-offcanvas-left
-                .sidebar-offcanvas {
-                    left: -50%; /* 6 columns */
-                }
-                .row-offcanvas-right.active {
-                    right: 50%; /* 6 columns */
-                }
-                .row-offcanvas-left.active {
-                    left: 50%; /* 6 columns */
-                }
-                .sidebar-offcanvas {
-                    position: absolute;
-                    top: 0;
-                    width: 50%; /* 6 columns */
-                }
-            } 
+            
         </style>
         <!--<link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"/>-->
     </head>
@@ -116,7 +80,9 @@
         <script src="js/bootstrap.min.js" type="text/javascript"></script>
         <!--<script src="js/knockout/knockout-min.js" type="text/javascript"></script>-->
         <!--<script src="js/knockout-bootstrap/knockout-bootstrap.js" type="text/javascript"></script>-->
-        <script src="js/sammy.js/sammy.min.js" type="text/javascript"></script>
+        <script src="js/sammy.js/sammy-0.7.5.min.js" type="text/javascript"></script>
+        <script src="js/mustache.js/mustache.js" type="text/javascript"></script>
+        <script src="js/sammy.js/plugins/sammy.mustache-0.7.5.min.js" type="text/javascript"></script>
         <!--<script src="js/autobahn/autobahn.min.jgz" type="text/javascript"></script>-->
         <!--        <script src="offcanvas.js">
                     $(document).ready(function() {
