--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
         <meta content="" name="description">
         <meta content="" name="author">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="css/jasny-bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <style>
             /*
-            * Style tweaks
-            * --------------------------------------------------
-            */
+             * Style tweaks
+             * --------------------------------------------------
+             */
             html,
             body {
                 overflow-x: hidden; /* Prevent scroll on narrow devices */
@@ -23,7 +24,7 @@
             footer {
                 padding: 30px 0;
             }
-            
+
         </style>
         <!--<link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"/>-->
     </head>
@@ -37,60 +38,72 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand">DSSC Mobile</a>
+                    <a href="#/" class="navbar-brand">DSSC Mobile</a>
                 </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#/">Home</a></li>
-                        <li><a href="#/about">About</a></li>
-                        <li><a href="#/contact">Contact</a></li>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Roller-Klassen <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#/class/1A">USC-Funclass </a></li>
+                                <li><a href="#/class/1B">Clubsport</a></li>
+                                <li><a href="#/class/1C">Sportsclass</a></li>
+                                <li><a href="#/class/1D">Racingclass</a></li>
+                                <li><a href="#/class/1E">Superclass</a></li>
+                                <li><a href="#/class/1F">Topclass</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#/class/CE">Sportsclass-Expert</a></li>
+                                <li><a href="#/class/DE">Racingclass-Expert</a></li>
+                                <li><a href="#/class/EE">Superclass-Expert</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sprinter-Klassen <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#/class/2A">Superclass-Sprinter</a></li>
+                                <li><a href="#/class/2B">Topclass-Sprinter</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unabhängig <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#/class/3A">Outlaw</a></li>
+                                <li><a href="#/class/3B">Maxiscooter</a></li>
+                                <li><a href="#/class/3C">4-Takt</a></li>
+                                <li><a href="#/class/3D">Shifterclass</a></li>
+                                <li><a href="#/class/3E">Mofaclass</a></li>
+                            </ul>
+                        </li>
                     </ul>
-                </div><!-- /.nav-collapse -->
+<!--
+                    <form class="navbar-form navbar-right" action="#/goto" method="POST" role="search">
+                        <button type="submit" class="btn btn-default">Gehe zu</button>
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Fahrernummer">
+                        </div>
+                    </form>
+-->
+                </div><!-- /.navbar-collapse -->
             </div><!-- /.container -->
         </div>
-
-        <div class="jumbotron">
-            <div class="container">
-                <h1>Hello, world!</h1>
-                <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                <p><a role="button" class="btn btn-primary btn-lg">Learn more »</a></p>
-            </div>
+        
+        <div id="main" class="container">
         </div>
 
-        <div id="main" class="container">
-            <div class="row">
-                <div class="col-md-6 alert alert-success">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a role="button" href="#/" class="btn btn-default">View details »</a></p>
-                </div>
-                <div class="col-md-6 alert alert-warning">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a role="button" href="#/" class="btn btn-default">View details »</a></p>
-                </div>
-            </div>
+        <div class="container">
             <hr>
             <footer>
-                <p>&copy; DSSC e.V. 2014</p>
+                <p>Alle Zeiten ohne Gewähr. &copy; DSSC e.V. 2014</p>
             </footer>
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.min.js" type="text/javascript"></script>
-        <!--<script src="js/knockout/knockout-min.js" type="text/javascript"></script>-->
-        <!--<script src="js/knockout-bootstrap/knockout-bootstrap.js" type="text/javascript"></script>-->
+        <script src="js/jasny-bootstrap.min.js" type="text/javascript"></script>
         <script src="js/sammy.js/sammy-0.7.5.min.js" type="text/javascript"></script>
         <script src="js/mustache.js/mustache.js" type="text/javascript"></script>
         <script src="js/sammy.js/plugins/sammy.mustache-0.7.5.min.js" type="text/javascript"></script>
-        <!--<script src="js/autobahn/autobahn.min.jgz" type="text/javascript"></script>-->
-        <!--        <script src="offcanvas.js">
-                    $(document).ready(function() {
-                        $('[data-toggle=offcanvas]').click(function() {
-                            $('.row-offcanvas').toggleClass('active')
-                        });
-                    });
-                </script>-->
 
         <script src="js/client.js" type="text/javascript"></script>
     </body>
